--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
   <head></head>
-  <body><p>Work in progress</p></body>
+  <body><p>Hello, world!</p></body>
 </html>
