--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
   <head></head>
-  <body><p>Hello, world!</p></body>
+  <body><a href="https://gitlab.com/coalang/go-coa/tree/bland">https://gitlab.com/coalang/go-coa/tree/bland</a></body>
 </html>
