--- a/screen-height.html
+++ b/screen-height.html
@@ -2,8 +2,9 @@
   <head>
     <script>
       const r = document.getElementById('result');
-      r.innerText = `window.screen.availHeight: ${window.screen.availHeight}\n`;
-      r.innerText += `window.screen.height: ${window.screen.height}\n`;
+      r.innerText = `screen.availHeight: ${window.screen.availHeight}\n`;
+      r.innerText += `screen.height: ${window.screen.height}\n`;
+      r.innerText += `innerHeight: ${window.innerHeight}\n`;
     </script>
   </head>
   <body>
