--- a/screen-height.html
+++ b/screen-height.html
@@ -16,10 +16,12 @@
         position: absolute;
         top: 0;
         left: 0;
+        background: pink;
       }
       #guide {
         position: absolute;
         left: 0;
+        background: green;
       }
     </style>
   </head>
