--- a/screen-height.html
+++ b/screen-height.html
@@ -30,7 +30,7 @@
       <p id="result"></p>
       <input type='text' />
     </div>
-    <div id="guide"></div>bottom<div>
+    <div id="guide">bottom<div>
     <input type='text' />
 
 
