--- a/screen-height.html
+++ b/screen-height.html
@@ -39,8 +39,8 @@
       <p id="result"></p>
       <input type='text' />
     </div>
-    <div id="bottom">bottom<div>
-    <div id="guide">guide<div>
+    <div id="bottom">bottom</div>
+    <div id="guide">guide</div>
     <input type='text' />
 
 
