--- a/screen-height.html
+++ b/screen-height.html
@@ -8,7 +8,7 @@
         r.innerText += `screen.height: ${window.screen.height}\n`;
         r.innerText += `visualViewport.height: ${window.visualViewport.height}\n`;
         r.innerText += `innerHeight: ${window.innerHeight}\n`;
-        document.getElementById('guide').style.bottom = `${window.innerHeight - 20}px`;
+        document.getElementById('guide').style.top = `${window.innerHeight - 20}px`;
       }, 100);
     </script>
     <style>
