--- a/screen-height.html
+++ b/screen-height.html
@@ -9,6 +9,7 @@
         r.innerText += `screen.height: ${window.screen.height}\n`;
         r.innerText += `visualViewport.height: ${window.visualViewport.height}\n`;
         r.innerText += `innerHeight: ${window.innerHeight}\n`;
+        r.innerText += `document.body.clientHeight: ${document.body.clientHeight}\n`;
         document.getElementById('guide').style.top = `${window.innerHeight - 20}px`;
       }, 100);
     </script>
