--- a/screen-height.html
+++ b/screen-height.html
@@ -15,19 +15,19 @@
     </script>
     <style>
       #overlay {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         background: pink;
       }
       #bottom {
-        position: absolute;
+        position: fixed;
         left: 0;
         bottom: 0;
         background: green;
       }
       #guide {
-        position: absolute;
+        position: fixed;
         left: 0;
         background: blue;
         margin: 0;
