--- a/screen-height.html
+++ b/screen-height.html
@@ -34,6 +34,14 @@
         padding: 0;
         height: 20px;
       }
+      #fullscreen {
+        z-index: 9999; 
+        width: 100%; 
+        height: 100%; 
+        position: fixed; 
+        top: 0; 
+        left: 0; 
+      }
     </style>
   </head>
   <body>
@@ -41,6 +49,7 @@
       <p id="result"></p>
       <input type='text' />
     </div>
+    <div id="fullscreen"></div>
     <div id="bottom">bottom</div>
     <div id="guide">guide</div>
     <input type='text' />
